--- a/Action_Potentials_Website_Self/blog_poseidon.html
+++ b/Action_Potentials_Website_Self/blog_poseidon.html
@@ -189,21 +189,19 @@
                                     <div class="lower-box">
                                         <h3>How to make best home interior ourself</h3>
                                         <div class="text">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                                                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur velit esse cillum dolore Lorem ipsum dolor sit amet, consectetur adipiscing
-                                                elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-                                            <h4>Two Column Text Sample</h4>
-                                            <div class="row clearfix">
-                                                <div class="col-md-6 col-sm-6 col-xs-12">
-                                                    <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est.</p>
-                                                </div>
-                                                <div class="col-md-6 col-sm-6 col-xs-12">
-                                                    <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est.</p>
-                                                </div>
-                                            </div>
-                                            <p>Here is main text quis nostrud exercitation ullamco laboris nisi here is itealic text ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                                                nulla rure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat <a href="#">here is link</a> cupidatat non proident, sunt in culpa qui officia deserunt
-                                                mollit anim id est laborum.</p>
+                                            <p> A team of seven tenth grade students came together with the aim of creating a research proposal for an experiment that is both original and feasible. If the proposal had been accepted, this experiment would
+                                                be conducted at the electron synchrotron at Hamburg, Germany, Deutsches Elektronen-Synchrotron, or DESY. The competition? 288 other like-minded and talented teams aiming for the same prize, one of the two
+                                                coveted spots for beamline and experiment time at DESY. This competition from the Beamlines 4 Schools program by CERN brings together students from multiple different interests, backgrounds, experiences,
+                                                and sometimes even countries!</p>
+                                            <p>The team I had been a part of, “PosEIDOn - Targeting Cancer with Positron and Electron Irradiation Diffraction Onset”, faced multiple challenges when trying to formulate an experiment capable of comparing the
+                                                effects of electron radiation on cancerous tissue to positron therapy. The inception of the goal of finding out whether positron therapy would be capable of reducing the long term effects of therapy radiation
+                                                and the scattering of ionizing radiation around the targeted area with the tumor took much research and countless discussions, and the method changed drastically throughout the creative process. The brainstorming
+                                                period of the project, however, most benefited from the array of skill sets and backgrounds on the team. Ideas including carbon fibre structural analysis and protein structure analysis were bounced around
+                                                and created based on each team member’s interests and goals, whether it be regarding aerospace engineering or medicine and pharmaceuticals. </p>
+                                            <p>By the time we finished writing the research proposal to be later evaluated by CERN and DESY scientists, I was convinced that science was an intricate form of art. Making sure that the “values” and the “colour
+                                                scheme” was right and that the “contrast” drew enough attention to the focal point of the “image” we were trying to paint, was all part of creating a procedure for the experiment when isolating the variables
+                                                and ensuring the reliability of the data. Though the experiment will not be conducted at DESY later this fall, the process of creating an experiment makes every young scientist an artist in their own right.
+                                                </p>
                                         </div>
                                     </div>
                                 </div>
