--- a/Action_Potentials_Website_Self/blog_poseidon.html
+++ b/Action_Potentials_Website_Self/blog_poseidon.html
@@ -176,7 +176,7 @@
                         <div class="blog-single padding-right">
                             <div class="inner-box">
                                 <div class="image-box">
-                                    <figure class="image"><img src="images/F1_In_Schools_Render.JPG" alt=""></figure>
+                                    <figure class="image"><img src="images/diagram 2.jpg" alt=""></figure>
                                     <span class="date">26 June 2021</span>
                                 </div>
                                 <div class="lower-content">
