--- a/Action_Potentials_Website_Self/CAD_tutorials.html
+++ b/Action_Potentials_Website_Self/CAD_tutorials.html
@@ -178,8 +178,9 @@
                             <h2>CAD Tutorials</h2>
                             <div class="bold-text">Take action and reach your potentials!</div>
                             <div class="text">
-                                <p>Under this section, you may find researches conducted by students regarding detailed survey and analysis regarding any subject. These studies provide insightful findings regarding an issue that involves mass number of population.
-                                    Checkout these studies and start exploring new avenues through the power of data science and statistics.
+                                <p>CAD stands for computer-aided design. Modern day engineers use it on a daily basis. In comparison to the expensive, time consuming proecess of drawing a blue print then produce a prototype, CAD can speed up this process
+                                    dramatically. It is pragmatic, easy to use (in most cases), and resourceful. Therefore, for both hobbists and future engineers, CAD is a crucial tool in product development. </p>
+                                <p>Under this section, you may find many different tutorial videos and blogs explaining how to use a computer-aided design software or a specific technique to model practically anything.
                                 </p>
                             </div>
                         </div>
@@ -208,59 +209,24 @@
 
                     <!--Filter-->
                     <div class="filters clearfix">
-                        <h3 class="text-portfolio"><i><b>More contents are coming soon!</b></i></h3>
+                        <h3 class="text-portfolio"><i><b>More contents are coming soon! Starting in August, tutorial videos will be released.</b></i></h3>
                         <br>
                         <ul class="filter-tabs filter-btns text-center clearfix">
                             <li class="active filter" data-role="button" data-filter="all">All Works</li>
-                            <li class="filter" data-role="button" data-filter=".research">Research Projects</li>
-                            <li class="filter" data-role="button" data-filter=".studies">Studies</li>
-                            <li class="filter" data-role="button" data-filter=".creative">Creative Projects</li>
-                            <li class="filter" data-role="button" data-filter=".other">Other Projects</li>
-                            <li class="filter" data-role="button" data-filter=".ongoing">Ongoing Projects by Our Founders</li>
-
+                            <li class="filter" data-role="button" data-filter=".video">Video Tutorials</li>
+                            <li class="filter" data-role="button" data-filter=".blogs">CAD-related blogs</li>
+                            <li class="filter" data-role="button" data-filter=".techniques">Techniques</li>
+                            <li class="filter" data-role="button" data-filter=".beginner">Beginner Tutorials</li>
+                            <li class="filter" data-role="button" data-filter=".Intermediate">Intermediate Tutorials</li>
+                            <li class="filter" data-role="button" data-filter=".advanced">Advanced Tutorials</li>
+                            <li class="filter" data-role="button" data-filter=".CFD">Computational Fluid Dynamics Tutorials</li>
+                            <li class="filter" data-role="button" data-filter=".simulation">Simulation Tutorials</li>
                     </div>
 
                     <div class="filter-list row clearfix">
 
                         <!-- Gallery Item -->
-                        <div class="gallery-item mix all research ongoing col-lg-4 col-md-6 col-sm-12">
-                            <div class="inner-box">
-                                <figure class="image-box">
-                                    <img src="images/diagram 2.jpg" alt="">
-                                    <!--Overlay Box-->
-                                    <div class="overlay-box">
-                                        <div class="overlay-inner">
-                                            <div class="content">
-                                                <h3><a href="blog_poseidon.html">PosEIDOn - Targeting Cancer with Positron and Electron Irradiation Scattering Onset
-                                                </a></h3>
-                                                <a href="blog_poseidon.html" class="link"><span class="icon flaticon-unlink"></span></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </figure>
-                            </div>
-                        </div>
-
-                        <!-- Gallery Item -->
-                        <div class="gallery-item mix all research ongoing col-lg-4 col-md-6 col-sm-12">
-                            <div class="inner-box">
-                                <figure class="image-box">
-                                    <img src="images/prion.JPG" alt="">
-                                    <!--Overlay Box-->
-                                    <div class="overlay-box">
-                                        <div class="overlay-inner">
-                                            <div class="content">
-                                                <h3><a href="blog_prion_disease.html">Protein Folding and Prion Diseases</a></h3>
-                                                <a href="blog_prion_disease.html" class="link"><span class="icon flaticon-unlink"></span></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </figure>
-                            </div>
-                        </div>
-
-                        <!-- Gallery Item -->
-                        <div class="gallery-item mix all research ongoing col-lg-4 col-md-6 col-sm-12">
+                        <div class="gallery-item mix all blog techniques col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <figure class="image-box">
                                     <img src="images/foil.jpg" alt="">
