--- a/Action_Potentials_Website_Self/CAD_tutorials.html
+++ b/Action_Potentials_Website_Self/CAD_tutorials.html
@@ -226,7 +226,7 @@
                     <div class="filter-list row clearfix">
 
                         <!-- Gallery Item -->
-                        <div class="gallery-item mix all blog techniques col-lg-4 col-md-6 col-sm-12">
+                        <div class="gallery-item mix all blogs techniques col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <figure class="image-box">
                                     <img src="images/foil.jpg" alt="">
