--- a/Action_Potentials_Website_Self/blog_poseidon.html
+++ b/Action_Potentials_Website_Self/blog_poseidon.html
@@ -339,7 +339,7 @@
                                     <div class="sidebar-title">
                                         <h2>Tags</h2>
                                     </div>
-                                    <a href="blog-ideas.html">Ideas</a>
+                                    <a href="blog-projects.html">Research Projects</a>
                                 </div>
 
                         </aside>
