--- a/Action_Potentials_Website_Self/projects-studies.html
+++ b/Action_Potentials_Website_Self/projects-studies.html
@@ -178,8 +178,8 @@
                             <h2>Studies</h2>
                             <div class="bold-text">Take action and reach your potentials!</div>
                             <div class="text">
-                                <p>Under this section, you may find researches conducted by students regarding detailed survey and analysis regarding any subject. These studies provide insightful findings regarding an issue that involves mass number of population.
-                                    Checkout these studies and start exploring new avenues through the power of data science and statistics.
+                                <p>Under this section, you may find further studies of any research topic conducted by students. The core concepts of these papers might not be stictly original. However, they still provide interesting, new insights to an
+                                    existing researched issue. Oftenly, these studies involve publically released data sets, survey of mass population, or complex statistical analysis. Check these amazing projects out and discover the beauty of data science.
                                 </p>
                             </div>
                         </div>
