--- a/Action_Potentials_Website_Self/summer-program.html
+++ b/Action_Potentials_Website_Self/summer-program.html
@@ -479,12 +479,12 @@
                 </div>
 
                 <!--Image Column-->
-                <div class="image-column " style="background-image: url(images/resource/video-img.jpg) ">
+                <div class="image-column " style="background-image: url(images/ActionPotentials_full.JPG) ">
                     <div class="inner-column ">
                         <div class="image ">
-                            <img src="images/resource/video-img.jpg " alt=" ">
+                            <img src="images/ActionPotentials_full.JPG " alt=" ">
                         </div>
-                        <a href="https://www.youtube.com/watch?v=SXZXtD60t2g " class="overlay-link lightbox-image ">
+                        <a href="https://youtu.be/zlmxRqA88x4" class="overlay-link lightbox-image ">
                             <div class="icon-box ">
                                 <span class="icon flaticon-play-button "></span>
                                 <i class="ripple "></i>
@@ -492,6 +492,8 @@
                         </a>
                     </div>
                 </div>
+                <a href="https://www.youtube.com/channel/UC7a5oBQ7JpqcZONI4o0Y4Xg" class="theme-btn btn-style-two "><span class="txt ">Redirect to Youtube</span></a>
+                <!--Delete row 496 once the official video is released-->
                 <!--End Image Column-->
 
             </div>
