--- a/Action_Potentials_Website_Self/service.html
+++ b/Action_Potentials_Website_Self/service.html
@@ -37,7 +37,6 @@
                         <!-- Info List -->
                         <ul class="info-list">
                             <li><a href="about.html">Our Story</a></li>
-                            <li><a href="projects.html">Inspiration</a></li>
                             <li class="Message us"><a href="contact.html">Contact us</a></li>
                         </ul>
                     </div>
@@ -88,27 +87,11 @@
                                         </li>
                                         <li class="dropdown"><a href="service.html">Services</a>
                                             <ul>
-                                                <li><a href="services-tutorials1.html">Tutorials</a></li>
-                                                <li><a href="services-resources.html">Learning Resources</a></li>
-                                                <li><a href="services-publishing.html">Published Projects</a></li>
+                                                <li><a href="summer-program.html">Summer Program</a></li>
                                                 <li><a href="join-us.html">Join us</a></li>
                                             </ul>
                                         </li>
-                                        <li class="dropdown"><a href="projects.html">Projects</a>
-                                            <ul>
-                                                <li><a href="projects-research.html">Research Projects</a></li>
-                                                <li><a href="projects-studies.html">Studies</a></li>
-                                                <li><a href="projects-creative.html">Creative Projects</a></li>
-                                                <li><a href="projects-other.html">Other Projects</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="dropdown"><a href="sessions.html">Book your Sessions</a>
-                                            <ul>
-                                                <li><a href="calendar.html">Check our Availabilities</a></li>
-                                                <li><a href="contact.html">Contact us</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="feedback.html">Feedback</a></li>
+                                        <li><a href="feedback.html">Give us Feedback</a></li>
                                         <li><a href="contact.html">Contact us</a></li>
                                     </ul>
                                 </div>
@@ -214,16 +197,13 @@
                             <!-- Sidebar Widget / List Widget-->
                             <div class="sidebar-widget list-widget">
                                 <!-- Services List -->
-                                <a href="blog.html">
-                                    <h2>Our Blogs</h2>
+                                <a href="service.html">
+                                    <h2>Our Services</h2>
                                 </a>
                                 <ul class="services-list">
-                                    <li><a href="blog-CAD.html">CAD</a></li>
-                                    <li><a href="blog-coding.html">Coding</a></li>
-                                    <li><a href="blog-ideas.html">Ideas</a></li>
-                                    <li><a href="blog-projects.html">Research Projects</a></li>
-                                    <li><a href="blog-robotics.html">Robotics</a></li>
-                                    <li><a href="blog-stories.html">STEM Stories</a></li>
+                                    <li><a href="summer-program.html">Summer Program</a></li>
+                                    <li><a href="join-us.html">Join Us</a></li>
+                                    <li><a href="contact.html">Contact Us</a></li>
                                 </ul>
                             </div>
 
@@ -242,97 +222,77 @@
             </div>
         </div>
 
-        <!-- Services Section Two -->
-        <section class="services-section-two ">
+        <!-- Call To Action Section -->
+        <section class="call-to-action-section" style="background-image: url(images/carbon_fiber.png) ">
             <div class="auto-container ">
-                <!-- Sec Title -->
-                <div class="sec-title ">
-                    <h2>Our Programs</h2>
-                    <div class="text ">We offer free, interactive, STEM-related learning resources. Whether it is an online course through a video tutorial series, a summer coding camp, or a one-on-one tutorials, we allow you to learn proactively in the comfort of home.</div>
+                <a href="summer-program.html ">
+                    <h2>Checkout our Summer Program</h2>
+                </a>
+                <div class="text ">This summer, we offer free, accessible, online STEM Learning Program.<br> Sign up now and start learning!</div>
+                <a href="contact.html " class="theme-btn btn-style-two "><span class="txt ">Contact us</span></a>
+                <a href="https://forms.gle/o6i49t4CGv2UE2EM9 " class="theme-btn btn-style-two "><span class="txt ">Apply now</span></a>
+                <a href="summer-program.html" class="theme-btn btn-style-two "><span class="txt ">Learn More</span></a>
+            </div>
+        </section>
+        <!-- End Call To Action Section -->
+
+        <!-- Services Section -->
+        <section class="services-section ">
+            <div class="auto-container ">
+                <!-- Title Box -->
+                <div class="title-box ">
+                    <h2>Our Summer Program</h2>
                 </div>
 
                 <div class="row clearfix ">
 
                     <!-- Service Block -->
-                    <div class="service-block-two col-lg-4 col-md-6 col-sm-12 ">
+                    <div class="service-block col-lg-4 col-md-6 col-sm-12 ">
                         <div class="inner-box wow fadeInLeft " data-wow-delay="0ms " data-wow-duration="1500ms ">
-                            <div class="content ">
-                                <div class="icon-box ">
-                                    <span class="icon flaticon-desk-1 "></span>
+                            <div class="image ">
+                                <div class="coda-kid ">
+                                    <a href="summer-program.html"><img src="images/kids-coding.jpg " alt=" " /></a>
+                                    <p class="coda-kid-image ">Image from Coda Kid (https://codakid.com/best-programming-language-kids/)</p>
                                 </div>
-                                <h3><a href="services-resources.html ">Our Online Learning Resources</a></h3>
-                                <div class="text ">We offer a broad range of online learning resources for students to access and acquire new STEM-related skills.</div>
-                                <a href="services-resources.html " class="read-more ">Read More</a>
+                            </div>
+                            <div class="lower-content ">
+                                <h3><a href="summer-program.html">Highly Accessible</a></h3>
+                                <div class="text ">This program is free of charge, and completely online. </div>
+                                <a href="summer-program.html" class="read-more ">Read more</a>
                             </div>
                         </div>
                     </div>
 
                     <!-- Service Block -->
-                    <div class="service-block-two col-lg-4 col-md-6 col-sm-12 ">
-                        <div class="inner-box wow fadeInLeft " data-wow-delay="300ms " data-wow-duration="1500ms ">
-                            <div class="content ">
-                                <div class="icon-box ">
-                                    <span class="icon flaticon-house-1 "></span>
+                    <div class="service-block col-lg-4 col-md-6 col-sm-12 ">
+                        <div class="inner-box wow fadeInUp " data-wow-delay="0ms " data-wow-duration="1500ms ">
+                            <div class="image ">
+                                <div class="lifewire ">
+                                    <a href="summer-program.html"><img src="images/lego-1-on-1.jpg " alt=" " /></a>
+                                    <p class="lifewire-image ">Image from LifeWire (https://www.lifewire.com/<br>kids-programming-languages-4125938)</p>
                                 </div>
-                                <h3><a href="services-tutorials1.html ">Our One-on-One Tutorials</a></h3>
-                                <div class="text ">We offer free, Zoom-based 1-on-1 tutorials for prospective students to personalize their learning.</div>
-                                <a href="services-tutorials1.html " class="read-more ">Read More</a>
+                            </div>
+                            <div class="lower-content ">
+                                <h3><a href="summer-program.html">Proactive Support</a></h3>
+                                <div class="text ">Helping you advance with personalized support. </div>
+                                <a href="summer-program.html" class="read-more ">Read more</a>
                             </div>
                         </div>
                     </div>
 
                     <!-- Service Block -->
-                    <div class="service-block-two col-lg-4 col-md-6 col-sm-12 ">
-                        <div class="inner-box wow fadeInLeft " data-wow-delay="600ms " data-wow-duration="1500ms ">
-                            <div class="content ">
-                                <div class="icon-box ">
-                                    <span class="icon flaticon-shop "></span>
-                                </div>
-                                <h3><a href="summer-program.html ">Our Summer Coding Programs</a></h3>
-                                <div class="text ">This summer, we are hosting our inaugural coding summer camp for interested students to learn the basics of STEM.</div>
-                                <a href="summer-program.html " class="read-more ">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Service Block -->
-                    <div class="service-block-two col-lg-4 col-md-6 col-sm-12 ">
+                    <div class="service-block col-lg-4 col-md-6 col-sm-12 ">
                         <div class="inner-box wow fadeInRight " data-wow-delay="0ms " data-wow-duration="1500ms ">
-                            <div class="content ">
-                                <div class="icon-box ">
-                                    <span class="icon flaticon-hospital "></span>
+                            <div class="image ">
+                                <div class="student-led- ">
+                                    <a href="service.html "><img src="images/student-led.jpg " alt=" " /></a>
+                                    <p class="student-led ">Image source: (https://i.ytimg.com/vi/ANSh-o_yiVo/maxresdefault.jpg))</p>
                                 </div>
-                                <h3><a href="join-us.html ">Volunteering</a></h3>
-                                <div class="text ">We are looking for passionate, dedicated volunteers to join this initiative. Get in touch with us and start teaching other interested students.</div>
-                                <a href="join-us.html " class="read-more ">Read More</a>
                             </div>
-                        </div>
-                    </div>
-
-                    <!-- Service Block -->
-                    <div class="service-block-two col-lg-4 col-md-6 col-sm-12 ">
-                        <div class="inner-box wow fadeInRight " data-wow-delay="300ms " data-wow-duration="1500ms ">
-                            <div class="content ">
-                                <div class="icon-box ">
-                                    <span class="icon flaticon-apartment-1 "></span>
-                                </div>
-                                <h3><a href="projects-research.html ">Research Projects</a></h3>
-                                <div class="text ">Conduct your own research (does not have to be STEM-related), analyze the result of this research, and publish them online with us.</div>
-                                <a href="projects-research.html " class="read-more ">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Service Block -->
-                    <div class="service-block-two col-lg-4 col-md-6 col-sm-12 ">
-                        <div class="inner-box wow fadeInRight " data-wow-delay="600ms " data-wow-duration="1500ms ">
-                            <div class="content ">
-                                <div class="icon-box ">
-                                    <span class="icon flaticon-hotel "></span>
-                                </div>
-                                <h3><a href="services-publishing.html ">Publishing Resources</a></h3>
-                                <div class="text ">If you had created or wrote something STEM-related, show us your outcome, and let us publish it on our sites, either as a blog or a project. </div>
-                                <a href="services-publishing.html " class="read-more ">Read More</a>
+                            <div class="lower-content ">
+                                <h3><a href="service.html ">Student-Led</a></h3>
+                                <div class="text ">We are a pair of high school students with first-hand experience that will help you to reach your potentials. </div>
+                                <a href="service.html " class="read-more ">Read more</a>
                             </div>
                         </div>
                     </div>
@@ -341,7 +301,7 @@
 
             </div>
         </section>
-        <!-- End Services Section Two -->
+        <!-- End Services Section -->
 
         <!--Main Footer-->
         <footer class="main-footer">
