--- a/Action_Potentials_Website_Self/summer-program.html
+++ b/Action_Potentials_Website_Self/summer-program.html
@@ -37,7 +37,6 @@
                         <!-- Info List -->
                         <ul class="info-list">
                             <li><a href="about.html">Our Story</a></li>
-                            <li><a href="projects.html">Inspiration</a></li>
                             <li class="Message us"><a href="contact.html">Contact us</a></li>
                         </ul>
                     </div>
@@ -88,27 +87,11 @@
                                         </li>
                                         <li class="dropdown"><a href="service.html">Services</a>
                                             <ul>
-                                                <li><a href="services-tutorials1.html">Tutorials</a></li>
-                                                <li><a href="services-resources.html">Learning Resources</a></li>
-                                                <li><a href="services-publishing.html">Published Projects</a></li>
+                                                <li><a href="summer-program.html">Summer Program</a></li>
                                                 <li><a href="join-us.html">Join us</a></li>
                                             </ul>
                                         </li>
-                                        <li class="dropdown"><a href="projects.html">Projects</a>
-                                            <ul>
-                                                <li><a href="projects-research.html">Research Projects</a></li>
-                                                <li><a href="projects-studies.html">Studies</a></li>
-                                                <li><a href="projects-creative.html">Creative Projects</a></li>
-                                                <li><a href="projects-other.html">Other Projects</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="dropdown"><a href="sessions.html">Book your Sessions</a>
-                                            <ul>
-                                                <li><a href="calendar.html">Check our Availabilities</a></li>
-                                                <li><a href="contact.html">Contact us</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="feedback.html">Feedback</a></li>
+                                        <li><a href="feedback.html">Give us Feedback</a></li>
                                         <li><a href="contact.html">Contact us</a></li>
                                     </ul>
                                 </div>
